--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcsh 'Luxemburg, Rosa, 1871-1919'
 - !lcc 'HX'
 - !lcsh 'Communists -- Germany -- Correspondence'
+- GITenberg
 title: Briefe aus dem Gefängnis
 url: http://www.gutenberg.org/ebooks/26964
